Text align fix

--- a/styles.css
+++ b/styles.css
@@ -370,7 +370,6 @@ img.nav-icon {
         margin-left: auto;
         margin-right: auto;
         margin-top: 15px;
-        text-align: center;
     }
 
     #resume-pdf {
@@ -436,7 +435,6 @@ img.nav-icon {
         margin-left: auto;
         margin-right: auto;
         margin-top: 15px;
-        text-align: center;
     }
 
     .article {
